@@ -90,7 +90,7 @@
         <dependency>
             <groupId>com.ning</groupId>
             <artifactId>async-http-client</artifactId>
-            <version>1.9.6</version>
+            <version>1.9.11</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
