@@ -1,6 +1,7 @@
 [SNAPSHOT]
  * update FaceBook API version from 2.0 to 2.2
  * update ning dependency for async functionality
+ * allow 'realm' parameter in OAuthParameters
 
 [3.0]
  * make compilable with OpenJDK8 
